<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.example.codemorse.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textET"
        android:id="@+id/editTextActMain"
        android:maxLength="20"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="114dp"
        android:layout_below="@+id/textHeadTwo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/btnWidthSize"
        android:layout_height="wrap_content"
        android:text="@string/btnText"
        android:textSize="@dimen/btnTextSize"
        android:background="@color/btnBackgroundColor"
        android:id="@+id/btnActMain"
        android:onClick="onClick"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHead"
        android:id="@+id/textHead"
        android:textSize="@dimen/textHeadSize"
        android:fontFamily="Georgia"
        android:textColor="@color/textColorHead"
        android:gravity="center_horizontal"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHeadTwo"
        android:id="@+id/textHeadTwo"
        android:fontFamily="Georgia"
        android:textColor="@color/textColorHeadTwo"
        android:textSize="@dimen/textHeadTwoSize"
        android:layout_below="@+id/textHead"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxText"
        android:id="@+id/checkBox"
        android:theme="@style/MyCheckBoxStyle"
        android:layout_below="@+id/newSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Дисплей"
        android:textOn="LED"
        android:id="@+id/newSwitch"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/editTextActMain"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
